--- a/indexcss.css
+++ b/indexcss.css
@@ -20,8 +20,9 @@ hr
 }
 .info
 {
-	width: 50%;
-	margin: 0 auto;
+	width: 70%;
+	margin:  0 auto;
+	text-align: left;
 }
 .timeline::after 
 {
@@ -124,19 +125,69 @@ a
 	width: 29%;
 	margin: 0 2%;
 }
+.col-sm-6
+{
+	width: 45%;
+	margin: 0 2.5%;
+}
 #contact
 {
 	color:white;
 	width:100%;
 	text-align:center;
 }
-#contact-title
-{
-	font-size:5vw;
-}
 .contact-link
 {
 	font-size:2vw;
+}
+.logo-icon
+{
+	font-size: 8em;
+}
+.logo-icon:hover
+{
+	animation: shake 0.5s;
+  	animation-iteration-count: infinite;
+}
+.btn-lg
+{
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+.btn-lg:hover
+{
+	background-color: black;
+	transition: all .2s ease;
+	transform:scale(1.3);
+}
+input[type="checkbox"] 
+{
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 8em;
+  width: 8em;
+  z-index: 100;
+}
+i
+{
+	box-shadow: -1px -1px 4px rgba(255, 255, 255, 0.05),
+    4px 4px 6px rgba(0, 0, 0, 0.2),
+    inset -1px -1px 4px rgba(255, 255, 255, 0.05),
+    inset 1px 1px 1px rgba(0, 0, 0, 0.1);
+}
+input[type="checkbox"]:checked ~ i
+{
+  box-shadow: inset 0 0 2px rgba(255, 255, 255, 0.05),
+    inset 4px 4px 6px rgba(0, 0, 0, 0.2);
+  color: yellow;
+  text-shadow: 0 0 15px yellow, 0 0 25px yellow;
+  animation: glow 1.5s linear infinite;
 }
 @media(max-width:768px)
 {
@@ -144,4 +195,17 @@ a
 	{
 		width: 95%;
 	}
+	.col-sm-6
+	{
+		width: 95%;
+		margin: 2%;
+	}
+}
+@keyframes glow {
+  0% {
+    filter: hue-rotate(0deg);
+  }
+  100% {
+    filter: hue-rotate(360deg);
+  }
 }
