fixed div border

--- a/indexcss.css
+++ b/indexcss.css
@@ -174,7 +174,7 @@ input[type="checkbox"]
   width: 8em;
   z-index: 100;
 }
-i
+.newdiv > i
 {
 	box-shadow: -1px -1px 4px rgba(255, 255, 255, 0.05),
     4px 4px 6px rgba(0, 0, 0, 0.2),
