--- a/indexcss.css
+++ b/indexcss.css
@@ -161,7 +161,7 @@ a
 }
 .btn-lg:hover
 {
-	background-color: black;
+	/*background-color: black;*/
 	transition: all .2s ease;
 	transform:scale(1.3);
 }
