--- a/indexcss.css
+++ b/indexcss.css
@@ -37,7 +37,7 @@ hr
 }
 .my-container 
 {
-	color: black;
+	color: white;
 	padding: 10px 25px 10px 70px;
 	position: relative;
 	background-color: inherit;
@@ -46,9 +46,9 @@ hr
 .my-container::before
 {
 	left: 60px;
-	border: medium solid white;
+	border: medium solid #202020;
 	border-width: 10px 10px 10px 0;
-	border-color: transparent white transparent transparent;
+	border-color: transparent #202020 transparent transparent;
 }
 
 .my-container::after 
@@ -58,7 +58,7 @@ hr
 	width: 25px;
 	height: 25px;
 	right: -17px;
-	background-color: white;
+	background-color: #202020;
 	border: 4px solid #FF9F55;
 	top: 15px;
 	border-radius: 50%;
@@ -76,9 +76,9 @@ hr
 	width: 0;
 	z-index: 1;
 	right: 30px;
-	border: medium solid white;
+	border: medium solid #202020;
 	border-width: 10px 0 10px 10px;
-	border-color: transparent transparent transparent white;
+	border-color: transparent transparent transparent #202020;
 }
 
 
@@ -87,7 +87,7 @@ hr
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size:1.5em;
   	padding: 2%;
-  	background-color: white;
+  	background-color: #202020;
   	position: relative;
  	border-radius: 6px;
 }
@@ -151,6 +151,7 @@ a
 }
 .btn-lg
 {
+	font-size: 5vw;
 	background: none;
 	color: inherit;
 	border: none;
@@ -159,11 +160,14 @@ a
 	cursor: pointer;
 	outline: inherit;
 }
-.btn-lg:hover
+.btn-lg:hover,.newdiv:hover
 {
-	/*background-color: black;*/
 	transition: all .2s ease;
 	transform:scale(1.3);
+}
+.newdiv
+{
+	margin-bottom: 3%;
 }
 input[type="checkbox"] 
 {
